[gd_scene load_steps=54 format=3 uid="uid://dngih7bngted0"]

[ext_resource type="Script" path="res://entities/slime/slime.gd" id="1_5t5w8"]
[ext_resource type="Texture2D" uid="uid://c0xrkupiw7qgg" path="res://entities/slime/slime_die.png" id="1_55xku"]
[ext_resource type="Texture2D" uid="uid://bb1wds43xofcd" path="res://entities/slime/slime_hit.png" id="2_g5532"]
[ext_resource type="Texture2D" uid="uid://cl8yf4hs20hf1" path="res://entities/slime/slime_idle1.png" id="3_a1fh7"]
[ext_resource type="Texture2D" uid="uid://crcqpxh0t711g" path="res://entities/slime/slime_idle2.png" id="4_20icf"]
[ext_resource type="Texture2D" uid="uid://dfrjyfo5cmelx" path="res://entities/slime/slime_idle3.png" id="5_426ed"]
[ext_resource type="Texture2D" uid="uid://bvaypj6ibosml" path="res://entities/slime/slime_jump.png" id="6_qxpwd"]
[ext_resource type="Script" path="res://common/character.gd" id="7_htnft"]
[ext_resource type="PackedScene" uid="uid://cis30eju1njn1" path="res://common/health_bar.tscn" id="9_cjqf2"]

[sub_resource type="AtlasTexture" id="AtlasTexture_8iwi1"]
atlas = ExtResource("1_55xku")
region = Rect2(960, 216, 80, 72)

[sub_resource type="AtlasTexture" id="AtlasTexture_7pk18"]
atlas = ExtResource("1_55xku")
region = Rect2(880, 216, 80, 72)

[sub_resource type="AtlasTexture" id="AtlasTexture_x3ovd"]
atlas = ExtResource("1_55xku")
region = Rect2(800, 216, 80, 72)

[sub_resource type="AtlasTexture" id="AtlasTexture_ee4ry"]
atlas = ExtResource("1_55xku")
region = Rect2(720, 216, 80, 72)

[sub_resource type="AtlasTexture" id="AtlasTexture_aq6y4"]
atlas = ExtResource("1_55xku")
region = Rect2(640, 216, 80, 72)

[sub_resource type="AtlasTexture" id="AtlasTexture_xj6sm"]
atlas = ExtResource("1_55xku")
region = Rect2(560, 216, 80, 72)

[sub_resource type="AtlasTexture" id="AtlasTexture_vyc6r"]
atlas = ExtResource("1_55xku")
region = Rect2(480, 216, 80, 72)

[sub_resource type="AtlasTexture" id="AtlasTexture_56hw0"]
atlas = ExtResource("1_55xku")
region = Rect2(400, 216, 80, 72)

[sub_resource type="AtlasTexture" id="AtlasTexture_i5xhl"]
atlas = ExtResource("1_55xku")
region = Rect2(320, 216, 80, 72)

[sub_resource type="AtlasTexture" id="AtlasTexture_soyny"]
atlas = ExtResource("1_55xku")
region = Rect2(240, 216, 80, 72)

[sub_resource type="AtlasTexture" id="AtlasTexture_18vyu"]
atlas = ExtResource("1_55xku")
region = Rect2(160, 216, 80, 72)

[sub_resource type="AtlasTexture" id="AtlasTexture_c0gdx"]
atlas = ExtResource("1_55xku")
region = Rect2(80, 216, 80, 72)

[sub_resource type="AtlasTexture" id="AtlasTexture_4m0s2"]
atlas = ExtResource("1_55xku")
region = Rect2(0, 216, 80, 72)

[sub_resource type="AtlasTexture" id="AtlasTexture_lurlk"]
atlas = ExtResource("2_g5532")
region = Rect2(0, 216, 80, 72)

[sub_resource type="AtlasTexture" id="AtlasTexture_k6qka"]
atlas = ExtResource("2_g5532")
region = Rect2(80, 216, 80, 72)

[sub_resource type="AtlasTexture" id="AtlasTexture_xytps"]
atlas = ExtResource("3_a1fh7")
region = Rect2(0, 216, 80, 72)

[sub_resource type="AtlasTexture" id="AtlasTexture_q4l7w"]
atlas = ExtResource("3_a1fh7")
region = Rect2(80, 216, 80, 72)

[sub_resource type="AtlasTexture" id="AtlasTexture_lfsbj"]
atlas = ExtResource("4_20icf")
region = Rect2(0, 216, 80, 72)

[sub_resource type="AtlasTexture" id="AtlasTexture_at553"]
atlas = ExtResource("4_20icf")
region = Rect2(80, 216, 80, 72)

[sub_resource type="AtlasTexture" id="AtlasTexture_w3pnd"]
atlas = ExtResource("4_20icf")
region = Rect2(160, 216, 80, 72)

[sub_resource type="AtlasTexture" id="AtlasTexture_ko0is"]
atlas = ExtResource("4_20icf")
region = Rect2(240, 216, 80, 72)

[sub_resource type="AtlasTexture" id="AtlasTexture_fkb3t"]
atlas = ExtResource("4_20icf")
region = Rect2(320, 216, 80, 72)

[sub_resource type="AtlasTexture" id="AtlasTexture_aljor"]
atlas = ExtResource("4_20icf")
region = Rect2(400, 216, 80, 72)

[sub_resource type="AtlasTexture" id="AtlasTexture_eivmq"]
atlas = ExtResource("4_20icf")
region = Rect2(480, 216, 80, 72)

[sub_resource type="AtlasTexture" id="AtlasTexture_xlfh0"]
atlas = ExtResource("5_426ed")
region = Rect2(0, 216, 80, 72)

[sub_resource type="AtlasTexture" id="AtlasTexture_cakf4"]
atlas = ExtResource("5_426ed")
region = Rect2(80, 216, 80, 72)

[sub_resource type="AtlasTexture" id="AtlasTexture_xdr0p"]
atlas = ExtResource("5_426ed")
region = Rect2(160, 216, 80, 72)

[sub_resource type="AtlasTexture" id="AtlasTexture_nxmn5"]
atlas = ExtResource("5_426ed")
region = Rect2(240, 216, 80, 72)

[sub_resource type="AtlasTexture" id="AtlasTexture_tmsgk"]
atlas = ExtResource("5_426ed")
region = Rect2(320, 216, 80, 72)

[sub_resource type="AtlasTexture" id="AtlasTexture_fnqtq"]
atlas = ExtResource("5_426ed")
region = Rect2(400, 216, 80, 72)

[sub_resource type="AtlasTexture" id="AtlasTexture_31ptg"]
atlas = ExtResource("5_426ed")
region = Rect2(480, 216, 80, 72)

[sub_resource type="AtlasTexture" id="AtlasTexture_ung4l"]
atlas = ExtResource("6_qxpwd")
region = Rect2(0, 216, 80, 72)

[sub_resource type="AtlasTexture" id="AtlasTexture_pfx4p"]
atlas = ExtResource("6_qxpwd")
region = Rect2(80, 216, 80, 72)

[sub_resource type="AtlasTexture" id="AtlasTexture_vy1vu"]
atlas = ExtResource("6_qxpwd")
region = Rect2(160, 216, 80, 72)

[sub_resource type="AtlasTexture" id="AtlasTexture_pxi85"]
atlas = ExtResource("6_qxpwd")
region = Rect2(240, 216, 80, 72)

[sub_resource type="AtlasTexture" id="AtlasTexture_8imh7"]
atlas = ExtResource("6_qxpwd")
region = Rect2(320, 216, 80, 72)

[sub_resource type="AtlasTexture" id="AtlasTexture_74h5p"]
atlas = ExtResource("6_qxpwd")
region = Rect2(400, 216, 80, 72)

[sub_resource type="AtlasTexture" id="AtlasTexture_a4t2r"]
atlas = ExtResource("6_qxpwd")
region = Rect2(480, 216, 80, 72)

[sub_resource type="AtlasTexture" id="AtlasTexture_a2p3r"]
atlas = ExtResource("6_qxpwd")
region = Rect2(560, 216, 80, 72)

[sub_resource type="AtlasTexture" id="AtlasTexture_i8h05"]
atlas = ExtResource("6_qxpwd")
region = Rect2(640, 216, 80, 72)

[sub_resource type="AtlasTexture" id="AtlasTexture_ejv02"]
atlas = ExtResource("6_qxpwd")
region = Rect2(720, 216, 80, 72)

[sub_resource type="AtlasTexture" id="AtlasTexture_mq2tf"]
atlas = ExtResource("6_qxpwd")
region = Rect2(800, 216, 80, 72)

[sub_resource type="SpriteFrames" id="SpriteFrames_hlvc5"]
animations = [{
"frames": [{
"duration": 1.0,
"texture": SubResource("AtlasTexture_8iwi1")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_7pk18")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_x3ovd")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_ee4ry")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_aq6y4")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_xj6sm")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_vyc6r")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_56hw0")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_i5xhl")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_soyny")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_18vyu")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_c0gdx")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_4m0s2")
}],
"loop": false,
"name": &"die",
"speed": 10.0
}, {
"frames": [{
"duration": 1.0,
"texture": SubResource("AtlasTexture_lurlk")
}, {
"duration": 1.5,
"texture": SubResource("AtlasTexture_k6qka")
}],
"loop": false,
"name": &"hit",
"speed": 3.0
}, {
"frames": [{
"duration": 1.0,
"texture": SubResource("AtlasTexture_xytps")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_q4l7w")
}],
"loop": true,
"name": &"idle1",
"speed": 3.0
}, {
"frames": [{
"duration": 1.0,
"texture": SubResource("AtlasTexture_lfsbj")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_at553")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_w3pnd")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_ko0is")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_fkb3t")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_aljor")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_eivmq")
}],
"loop": true,
"name": &"idle2",
"speed": 6.0
}, {
"frames": [{
"duration": 1.0,
"texture": SubResource("AtlasTexture_xlfh0")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_cakf4")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_xdr0p")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_nxmn5")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_tmsgk")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_fnqtq")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_31ptg")
}],
"loop": true,
"name": &"idle3",
"speed": 6.0
}, {
"frames": [{
"duration": 1.0,
"texture": SubResource("AtlasTexture_ung4l")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_pfx4p")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_vy1vu")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_pxi85")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_8imh7")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_74h5p")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_a4t2r")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_a2p3r")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_i8h05")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_ejv02")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_mq2tf")
}],
"loop": false,
"name": &"jump",
"speed": 8.0
}]

[sub_resource type="CircleShape2D" id="CircleShape2D_640dh"]
radius = 7.0

[node name="Slime" type="Area2D"]
scale = Vector2(4, 4)
script = ExtResource("1_5t5w8")

[node name="AnimatedSprite" type="AnimatedSprite2D" parent="."]
sprite_frames = SubResource("SpriteFrames_hlvc5")
animation = &"die"
autoplay = "idle1"
frame = 12
frame_progress = 1.0
offset = Vector2(-6, -5)

[node name="CollisionShape" type="CollisionShape2D" parent="."]
shape = SubResource("CircleShape2D_640dh")

[node name="Character" type="Node" parent="."]
script = ExtResource("7_htnft")

[node name="HealthBar" parent="." instance=ExtResource("9_cjqf2")]
offset_left = -16.5
offset_top = -20.25
offset_right = 133.5
offset_bottom = 19.75

[connection signal="area_entered" from="." to="." method="_on_area_entered"]
